kubernetes-manifests/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-portal-deployment
  namespace: web-app
spec:
  replicas: 6 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: quiz-portal
  template:
    metadata:
      labels:
        app: quiz-portal
    spec:
      containers:
        - name: quiz-portal
          image: yash5090/quiz-portal:latest # Replace with the actual image tag
          ports:
            - containerPort: 5000 # Replace with the port your Tetris game listens on
            volumeMounts:
          - name: quiz-portal-storage
            mountPath: /data  #Mount path inside the container
      volumes:
      - name: quiz-portal-storage
        persistentVolumeClaim:
          claimName: quiz-portal-pvc  # Reference to the PVC
