kubernetes-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-portal-service
  namespace: web-app
spec:
  selector:
    app: quiz-portal
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
